# icy_sixel

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: run_tests.yml
assets/kmeans/: 16colors_diffusion_full.six  16colors_diffusion_low.six  16colors_diffusion_medium.six  16colors_diffusion_off.six  256colors_diffusion_full.six  256colors_diffusion_low.six  256colors_diffusion_medium.six  256colors_diffusion_off.six  2colors_diffusion_full.six  2colors_diffusion_low.six  2colors_diffusion_medium.six  2colors_diffusion_off.six
assets/wu/: 16colors_diffusion_full.six  16colors_diffusion_low.six  16colors_diffusion_medium.six  16colors_diffusion_off.six  256colors_diffusion_low.six  256colors_diffusion_medium.six  256colors_diffusion_off.six  2colors_diffusion_low.six  2colors_diffusion_medium.six  2colors_diffusion_off.six
benches/: README.md  decoder_benchmark.rs  encoder_benchmark.rs
crates/icy_sixel/: Cargo.toml  README.md
crates/icy_sixel-cli/: Cargo.toml  README.md
crates/icy_sixel-cli/src/: main.rs
crates/icy_sixel-cli/tests/: cli_smoke.rs
crates/icy_sixel/benches/: README.md  decoder_benchmark.rs  encoder_benchmark.rs
crates/icy_sixel/fuzz/: Cargo.toml
crates/icy_sixel/fuzz/fuzz_targets/: fuzz_decoder.rs  fuzz_encoder.rs  fuzz_roundtrip.rs
crates/icy_sixel/src/: decoder.rs  encoder.rs  lib.rs  sixel_image.rs
crates/icy_sixel/tests/: decoder_tests.rs
crates/icy_sixel/tests/data/: beelitz_heilstätten.six  beelitz_heilstätten_2colors.six  transparency.six
examples/: _shared.rs  decode.rs  decode_from_ansi.rs  encode.rs  encode_with_libsixel.sh  map8.rs  profile_cleanroom.rs  profile_cleanroom_only.rs  quality_comparison.rs  roundtrip_test.rs  snake.rs  snake.six  snake_libsixel.six  test_overlay_pattern.rs  test_raster_size.rs  test_real_sixels.rs  test_repeat_overlay.rs  test_rgba.rs  test_sixel_ans.rs
src/: decoder.rs  dither.rs  encoder.rs  lib.rs  pixelformat.rs  quant.rs  tosixel.rs
tests/: basic_tests.rs  decoder_tests.rs  regression_tests.rs
tests/data/: beelitz_heilstätten_low.six  test_page.six
