#workspace = { members = ["sixel_test"] }
[package]
name = "icy_sixel"
version = "0.1.2"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "A 100% rust sixel library."
homepage = "https://github.com/mkrueger/icy_sixel"
repository = "https://github.com/mkrueger/icy_sixel"
license-file = "LICENSE"
keywords = ["sixel"]

[dependencies]
