#workspace = { members = ["sixel_test"] }
[package]
name = "icy_sixel"
version = "0.2.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "A 100% rust sixel library."
homepage = "https://github.com/mkrueger/icy_sixel"
repository = "https://github.com/mkrueger/icy_sixel"
license-file = "LICENSE"
keywords = ["sixel"]

[dependencies]

[dev-dependencies]
image = { version = "0.25.4", default-features = false, features = ["png"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[[bench]]
name = "decoder_benchmark"
harness = false
