[package]
name = "icy_sixel-cli"
version = "0.4.1"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "Command-line tool for encoding and decoding SIXEL graphics"
homepage = "https://github.com/mkrueger/icy_sixel"
repository = "https://github.com/mkrueger/icy_sixel"
license = "Apache-2.0"
keywords = ["sixel", "terminal", "graphics", "cli", "image"]
categories = ["command-line-utilities", "graphics", "multimedia::images"]
readme = "../../README.md"

[[bin]]
name = "sixel"
path = "src/main.rs"

[dependencies]
icy_sixel = { version = "0.4.0", path = "../icy_sixel" }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25.4", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
