[package]
name = "icy_sixel"
version = "0.4.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "A 100% Rust SIXEL encoder and decoder library with high-quality color quantization"
homepage = "https://github.com/mkrueger/icy_sixel"
repository = "https://github.com/mkrueger/icy_sixel"
license = "Apache-2.0"
keywords = ["sixel", "terminal", "graphics", "image", "encoder"]
categories = ["encoding", "graphics", "multimedia::images"]
readme = "../../README.md"

[dependencies]
quantette = "0.5.1"
thiserror = "2.0"

[dev-dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
criterion = { version = "0.8.1", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[[bench]]
name = "decoder_benchmark"
harness = false

[[bench]]
name = "encoder_benchmark"
harness = false
