[package]
name = "icy_sixel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.icy_sixel]
path = ".."

[[bin]]
name = "fuzz_decoder"
path = "fuzz_targets/fuzz_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encoder"
path = "fuzz_targets/fuzz_encoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
bench = false
